--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lesson7",
   "version": "0.1.0",
-  "homepage": "https://Nurzada03.github.io/Router-Project",
+  "homepage": "https://Nurzada03.github.io/HomeWork-17",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
